--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 .bg-image {
   background: linear-gradient(to left, #ffffff, #e6e6e6);
-  height: 120vh;
+  height: 100vh;
   width: 100%;
-  position: absolute;
-  /* overflow-x: hidden; */
+  position: fixed;
 }
 
 .color-div {
   background-color: white;
   width: 946px;
   height: 80vh;
+  position: relative;
+  z-index: 99;
 }
 
 .form-floating {
@@ -18,7 +19,7 @@
 
 .reg-div {
   background-color: #7c9cd7;
-  width: 290px
+  width: 390px
 }
 
 .reg {
@@ -32,7 +33,30 @@
 
 .waves {
   width: 100%;
-  z-index: 99;
-  margin-top: 20px;
+  z-index: -1;
+  margin-top: -50px;
   padding: 0px;
+  overflow: hidden;
+  position: absolute;
+}
+.color-div2{
+  background-color: white;
+  width: 946px;
+  height: 60vh;
+  position: relative;
+  z-index: 99;
+}
+.bg-image2{
+  background: linear-gradient(to left, #ffffff, #e6e6e6);
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+}
+.waves2 {
+  width: 100%;
+  z-index: -1;
+  margin-top: -30px;
+  padding: 0px;
+  overflow: hidden;
+  position: absolute;
 }
