--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,8 @@
   overflow: hidden;
   position: absolute;
 }
+.text-1 {
+  font-family: "Sedan SC", serif;
+  font-weight: 400;
+  font-style: normal;
+}
